# test-agent

./: .gitignore  README.md  claude.md  pyproject.toml
agent/: __init__.py  claude_bridge.py  cli.py  core.py  db.py  knowledge.py  mcp.py  tech_stack.py
agent/skills/: __init__.py  coder.py  shipper.py  tester.py
agent/subagents/: __init__.py  executor.py  planner.py  reviewer.py
templates/: plan_template.md
